Bug 1869099 - Don't resize edit bookmark panel on folder tree un-collapse. r=desktop-theme-reviewers,dao
I think the current default width is fine, but if we need some extra
width we can use --panel-width on the panel and that's fine. The current
width change isn't all that big.

Differential Revision: https://phabricator.services.mozilla.com/D196022

UltraBlame original commit: 6efda94f77876771245c8e3b2a02fc5ab841da2e

--- a/browser/themes/shared/places/editBookmarkPanel.css
+++ b/browser/themes/shared/places/editBookmarkPanel.css
@@ -94,29 +94,6 @@ bottom
 0
 ;
 }
-/
-*
-Implements
-editBookmarkPanel
-resizing
-on
-folderTree
-un
--
-collapse
-.
-*
-/
-#
-editBMPanel_folderTree
-{
-min
--
-width
-:
-27em
-;
-}
 #
 editBMPanel_newFolderButton
 {
